<resources>
    <string name="app_name">Mocha Moment</string>
    <string name="banner">Mocha Moment</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="directions">Get Directions</string>
    <string name="company">Our Company</string>
    <string name="photo">Take a Picture of Your Order</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="facebook">Log In with Facebook</string>
    <string name="facebook_app_id">526838588258922</string>
    <string name="fb_login_protocol_scheme">fb526838588258922</string>
    <string name="create_account">Create Account</string>
    <string name="create_account2">Create an Account</string>
    <string name="preference_file_key"></string>
    <string name="mocha">Mocha</string>
    <string name="mocha_desc">Our rich, full-bodied espresso combined with bittersweet mocha sauce and steamed milk, then topped with sweetened whipped cream. The classic coffee drink that always sweetly satisfies.</string>
    <string name="price">$3.99</string>
    <string name="espresso">Espresso</string>
    <string name="espresso_desc">Our smooth signature Espresso Roast with rich flavor and caramelly sweetness is at the very heart of everything we do.</string>
    <string name="frost">Frost</string>
    <string name="frost_price">$4.99</string>
    <string name="frost_desc">We blend mocha sauce and chocolate chips with coffee, milk and ice, then top it off with whipped cream and a mocha drizzle to bring you endless java joy.</string>
    <string name="go_back">Go Back</string>
    <string name="about">About Our Company</string>
    <string name="about_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="call">Call Us</string>
    <string name="message">Send Us A Message</string>
    <string name="facebook_page">Visit Us on Facebook</string>
    <string name="review">Leave a Review</string>
    <string name="add_order">Add to Order</string>
    <string name="order_name">Enter Name</string>
    <string name="checkout">Checkout</string>
    <string name="order_summary">Order Summary</string>
    <string name="delete_order">Delete Order</string>
    <string name="address">Location Address\n1121 Center Ave, Janesville, WI 53546</string>
    <string name="logo">Mocha Moment Logo</string>
    <string name="quantity">1</string>
</resources>
